--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="#story">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-
             </ul>
+            <div id="burger">☰</div>
         </nav>
     </header>
     <main>
