ajuste de footer e historia

--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                     Hi, I'm Jesus Hernandez, I'm 42 years old, I was born and lived in Mexico for 41 years, I currently
                     live in the USA, I've always been passionate about numbers and computing, since I'm born in the 80's
                     I'm a fan of the movies and music of those times, my favorite movies are definitely Back to the
-                    future, and Karate Kid, I usually listen to random music in Spanish and English from bands from that
-                    time like REO Speedwagon, Scorpions, Caifanes, Soda Estero, Chicago, NSYNC, etc.
+                    future, Karate Kid and of course The Matrix, I usually listen to random music in Spanish and English of bands
+                    like REO Speedwagon, Scorpions, Caifanes, Soda Estero, Chicago, NSYNC, etc.
                     <br><br>
-                    When I was 12 years old I met a computer for the first time in high school, I remember learning to
+                    When I was 12 years old I met a computer for the first time in middle school, I remember learning to
                     use it and I was fascinated by programming in BASIC and LOGO, at that time I remember that we used
                     3.5 and 5.25 inch floppy disks to load these programs, I also learned to use Microsoft Works, my
                     time in high school was a very important influence for me because it helped me to identify that what
